@@ -11,7 +11,6 @@ WISH: OnTheSpot editing, or maybe switch to miiiiiiif
 WISH: just for fun, do shade and tint with XRender.
 
 6.1
-TODO: trailing spaces rmeoval for rect selections
 	- update iso8859-7 table (euro and drachma round-trip et al.).
 	- fix a crash when the selection scrolls out of the scrollback
           while the user still drags.
@@ -21,6 +20,9 @@ TODO: trailing spaces rmeoval for rect selections
           to extremely long lines and (hopefully) some segfaults.
         - iso14755 overlay position was wrong.
         - iso14755 overlay now displays rendition info, too.
+        - use unicode white space instead of hardcoded values for stripping
+          whitespace.
+        - do whitespace stripping on rectangular selections.
 
 6.0  Sat Dec 24 13:58:56 CET 2005
 	- make it compile without SMART_RESIZE again.
